Custom--app/main/default/objects/AcqPipeline__c/AcqPipeline__c.object-meta.xml
<CustomObject>
    <label>Pipeline</label>
    <nameField>
        <displayFormat>PIPE-{00000}</displayFormat>
        <label>Pipeline ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>