Custom--app/main/default/objects/AcqPipeline__c/fields/Acq_Costs_Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Acq_Costs_Paid_at_Closing__c</fullName>
    <formula>Closing_Statement_Title_Policy_Expense__c + Closing_Statement_Other_Closing_Expenses__c + Closing_Statement_Lien_Payoff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acq Costs Paid at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>