Custom--app/main/default/objects/AcqPipeline__c/fields/Annual_Insurance_Est_UW__c.field-meta.xml
<CustomField>
    <fullName>Annual_Insurance_Est_UW__c</fullName>
    <formula>Prospect_Record__r.Annual_Insurance_Est_UW__c</formula>
    <label>Annual Insurance Est @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>