Custom--app/main/default/objects/AcqPipeline__c/fields/Approved_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Approved_Offer_Price__c</fullName>
    <formula>Prospect_Record__r.Approved_Offer_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Offer Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>