Custom--app/main/default/objects/AcqPipeline__c/fields/Assumed_Lease_HAP_Rent__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Lease_HAP_Rent__c</fullName>
    <label>Lease HAP Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>