Custom--app/main/default/objects/AcqPipeline__c/fields/Assumed_Lease_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Lease_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease Review Required</label>
    <type>Checkbox</type>
</CustomField>