Custom--app/main/default/objects/AcqPipeline__c/fields/Assumed_Lease_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Lease_Start_Date__c</fullName>
    <label>Lease Start Date</label>
    <type>Date</type>
</CustomField>