Custom--app/main/default/objects/AcqPipeline__c/fields/Assumed_Lease_Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Lease_Tenant_Name__c</fullName>
    <label>Lease Tenant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>