Custom--app/main/default/objects/AcqPipeline__c/fields/Assumed_Lease_Tenant_Rent__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Lease_Tenant_Rent__c</fullName>
    <label>Lease Tenant Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>