Custom--app/main/default/objects/AcqPipeline__c/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <formula>Text(Opportunity__r.Baths__c)</formula>
    <label>Baths</label>
    <type>Text</type>
</CustomField>