Custom--app/main/default/objects/AcqPipeline__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <formula>Text(Opportunity__r.Bedrooms__c)</formula>
    <label>Bedrooms</label>
    <type>Text</type>
</CustomField>