Custom--app/main/default/objects/AcqPipeline__c/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <formula>Text( Prospect_Record__r.Bid_Type__c )</formula>
    <label>Bid Type</label>
    <type>Text</type>
</CustomField>