Custom--app/main/default/objects/AcqPipeline__c/fields/Broker_Contract_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contract_Comments__c</fullName>
    <formula>Opportunity__r.Broker_Contract_Comments__c</formula>
    <label>Broker Contract Comments</label>
    <type>Text</type>
</CustomField>