Custom--app/main/default/objects/AcqPipeline__c/fields/Broker_Status__c.field-meta.xml
<CustomField>
    <fullName>Broker_Status__c</fullName>
    <formula>Text(Opportunity__r.status__c)</formula>
    <label>Broker Status</label>
    <type>Text</type>
</CustomField>