Custom--app/main/default/objects/AcqPipeline__c/fields/Cancelled_Dead__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Dead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled / Dead</label>
    <type>Checkbox</type>
</CustomField>