Custom--app/main/default/objects/AcqPipeline__c/fields/Capitilized_Acq_Costs_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Capitilized_Acq_Costs_Estimate__c</fullName>
    <formula>Prospect_Record__r.Capitalized_Acq_Costs_Estimate__c</formula>
    <label>Capitilized Acq Costs Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>