Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Company__c.field-meta.xml
<CustomField>
    <fullName>Closing_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pipeline (Closing Company)</relationshipLabel>
    <relationshipName>Pipeline2</relationshipName>
    <type>Lookup</type>
</CustomField>