Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Company_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Closing_Company_Contact_Phone__c</fullName>
    <formula>Closing_Company__r.Phone</formula>
    <label>Closing Company Contact Phone</label>
    <type>Text</type>
</CustomField>