Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Docs_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Docs_Approval_Date__c</fullName>
    <label>Closing Docs Approval Date</label>
    <type>Date</type>
</CustomField>