Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Docs_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Docs_Signed_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Closing Docs Signed Date</label>
    <type>Date</type>
</CustomField>