Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Statement_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Contract_Price__c</fullName>
    <label>Closing Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>