Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Statement_Funds_Due_from_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Funds_Due_from_Buyer__c</fullName>
    <label>Closing COE Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>