Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Statement_HOA_Prepays__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_HOA_Prepays__c</fullName>
    <label>Closing HOA Prepays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>