Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Statement_Lien_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Lien_Payoff__c</fullName>
    <label>Closing Lien Payoff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>