Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Statement_Other_Closing_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Other_Closing_Expenses__c</fullName>
    <label>Closing Other Closing Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>