Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Statement_Property_Tax_Prorates__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Property_Tax_Prorates__c</fullName>
    <label>Closing Property Tax Prorates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>