Custom--app/main/default/objects/AcqPipeline__c/fields/Closing_Statement_Title_Policy_Expense__c.field-meta.xml
<CustomField>
    <fullName>Closing_Statement_Title_Policy_Expense__c</fullName>
    <label>Closing Title Policy Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>