Custom--app/main/default/objects/AcqPipeline__c/fields/COE_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>COE_Due_Date__c</fullName>
    <label>COE Funds Due to Title Date</label>
    <type>Date</type>
</CustomField>