Custom--app/main/default/objects/AcqPipeline__c/fields/Contract_Disclosures_Special_Addendums__c.field-meta.xml
<CustomField>
    <fullName>Contract_Disclosures_Special_Addendums__c</fullName>
    <label>Contract Disclosures/Special Addendums</label>
    <length>255</length>
    <type>Text</type>
</CustomField>