Custom--app/main/default/objects/AcqPipeline__c/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Expiration Date</label>
    <type>Date</type>
</CustomField>