Custom--app/main/default/objects/AcqPipeline__c/fields/Contract_Price_After_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price_After_Reduction__c</fullName>
    <formula>Accepted_Contract_Price__c - Reduction_Amount_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Price After Reduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>