Custom--app/main/default/objects/AcqPipeline__c/fields/Contract_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Reviewed_Date__c</fullName>
    <label>Contract Reviewed Date</label>
    <type>Date</type>
</CustomField>