Custom--app/main/default/objects/AcqPipeline__c/fields/Converted_to_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Portfolio</label>
    <type>Checkbox</type>
</CustomField>