Custom--app/main/default/objects/AcqPipeline__c/fields/Cost_Basis_Est__c.field-meta.xml
<CustomField>
    <fullName>Cost_Basis_Est__c</fullName>
    <formula>Purchase_Price__c + Rehab_Budget_Est__c + Closing_Title_Acq_Costs__c + Prospect_Record__r.Capitalized_Acq_Costs_Estimate__c</formula>
    <label>Cost Basis Est @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>