Custom--app/main/default/objects/AcqPipeline__c/fields/Current_Occupancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupancy_Status__c</fullName>
    <formula>Text(Opportunity__r.Current_Occupancy_Status__c)</formula>
    <label>Current Occupancy Status</label>
    <type>Text</type>
</CustomField>