Custom--app/main/default/objects/AcqPipeline__c/fields/Dir_IMG_Closing_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Dir_IMG_Closing_Approval_Date__c</fullName>
    <label>Dir IMG Closing Approval Date</label>
    <type>Date</type>
</CustomField>