Custom--app/main/default/objects/AcqPipeline__c/fields/Dir_IMG_DD_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Dir_IMG_DD_Approval_Date__c</fullName>
    <label>Dir IMG DD Approval Date</label>
    <type>Date</type>
</CustomField>