Custom--app/main/default/objects/AcqPipeline__c/fields/Direct_Shared_Services_UW__c.field-meta.xml
<CustomField>
    <fullName>Direct_Shared_Services_UW__c</fullName>
    <formula>-1*Market__r.Direct_SSA_Per_Home__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Shared Services @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>