Custom--app/main/default/objects/AcqPipeline__c/fields/doDirectorClosingApproval__c.field-meta.xml
<CustomField>
    <fullName>doDirectorClosingApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doDirectorClosingApproval</label>
    <type>Checkbox</type>
</CustomField>