Custom--app/main/default/objects/AcqPipeline__c/fields/doInitiate_Due_Diligence__c.field-meta.xml
<CustomField>
    <fullName>doInitiate_Due_Diligence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doInitiate Due Diligence</label>
    <type>Checkbox</type>
</CustomField>