Custom--app/main/default/objects/AcqPipeline__c/fields/doOrderBudgetWalk__c.field-meta.xml
<CustomField>
    <fullName>doOrderBudgetWalk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doOrderBudgetWalk</label>
    <type>Checkbox</type>
</CustomField>