Custom--app/main/default/objects/AcqPipeline__c/fields/doOrderCOEFunds__c.field-meta.xml
<CustomField>
    <fullName>doOrderCOEFunds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doOrderCOEFunds</label>
    <type>Checkbox</type>
</CustomField>