Custom--app/main/default/objects/AcqPipeline__c/fields/doOrderEscrow__c.field-meta.xml
<CustomField>
    <fullName>doOrderEscrow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doOrderEscrow</label>
    <type>Checkbox</type>
</CustomField>