Custom--app/main/default/objects/AcqPipeline__c/fields/doRehabApproval__c.field-meta.xml
<CustomField>
    <fullName>doRehabApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doRehabApproval</label>
    <type>Checkbox</type>
</CustomField>