Custom--app/main/default/objects/AcqPipeline__c/fields/doReview_Complete__c.field-meta.xml
<CustomField>
    <fullName>doReview_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doReview Complete</label>
    <type>Checkbox</type>
</CustomField>