Custom--app/main/default/objects/AcqPipeline__c/fields/EMD_Cancelled_Status__c.field-meta.xml
<CustomField>
    <fullName>EMD_Cancelled_Status__c</fullName>
    <label>EMD Cancelled Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMD Requested</fullName>
            </value>
            <value>
                <fullName>EMD Received</fullName>
            </value>
            <value>
                <fullName>EMD Forfeited</fullName>
            </value>
            <value>
                <fullName>No EMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>