Custom--app/main/default/objects/AcqPipeline__c/fields/EMD_Due_to_Title_Date__c.field-meta.xml
<CustomField>
    <fullName>EMD_Due_to_Title_Date__c</fullName>
    <label>EMD Due to Title Date</label>
    <type>Date</type>
</CustomField>