Custom--app/main/default/objects/AcqPipeline__c/fields/Entera_Generated__c.field-meta.xml
<CustomField>
    <fullName>Entera_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entera Generated</label>
    <type>Checkbox</type>
</CustomField>