Custom--app/main/default/objects/AcqPipeline__c/fields/Entera_ID__c.field-meta.xml
<CustomField>
    <fullName>Entera_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Entera ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>