Custom--app/main/default/objects/AcqPipeline__c/fields/Escrow_Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Cancelled_Reason__c</fullName>
    <label>Escrow Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Rehab Budget</fullName>
            </value>
            <value>
                <fullName>HOA Issues</fullName>
            </value>
            <value>
                <fullName>Title Issues</fullName>
            </value>
            <value>
                <fullName>Seller Cancels</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>