Custom--app/main/default/objects/AcqPipeline__c/fields/Escrow_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pipeline (Escrow Company)</relationshipLabel>
    <relationshipName>Pipeline3</relationshipName>
    <type>Lookup</type>
</CustomField>