Custom--app/main/default/objects/AcqPipeline__c/fields/Escrow_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Open_Date__c</fullName>
    <label>Escrow Open Date</label>
    <type>Date</type>
</CustomField>