Custom--app/main/default/objects/AcqPipeline__c/fields/Escrow_Wiring_Complete__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Wiring_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escrow Wiring Complete</label>
    <type>Checkbox</type>
</CustomField>