Custom--app/main/default/objects/AcqPipeline__c/fields/Escrow_Wiring_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Wiring_Complete_Date__c</fullName>
    <label>Escrow Wiring Complete Date</label>
    <type>Date</type>
</CustomField>