Custom--app/main/default/objects/AcqPipeline__c/fields/Expected_Escrow_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Escrow_Close_Date__c</fullName>
    <label>Expected Escrow Close Date</label>
    <type>Date</type>
</CustomField>