Custom--app/main/default/objects/AcqPipeline__c/fields/Expected_Gross_Annual_Rent_UW__c.field-meta.xml
<CustomField>
    <fullName>Expected_Gross_Annual_Rent_UW__c</fullName>
    <formula>Prospect_Record__r.Expected_Gross_Monthly_Rent_UW__c *12</formula>
    <label>Expected Gross Annual Rent @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>