Custom--app/main/default/objects/AcqPipeline__c/fields/Final_Rehab_Budget_Est_UW__c.field-meta.xml
<CustomField>
    <fullName>Final_Rehab_Budget_Est_UW__c</fullName>
    <label>Final Rehab Budget Est @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>