Custom--app/main/default/objects/AcqPipeline__c/fields/Fixed_Exp_Inc_Pool_UW__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Exp_Inc_Pool_UW__c</fullName>
    <formula>-1*(Prospect_Record__r.Property_Tax_Est_UW__c + (Prospect_Record__r.Monthly_HOA_UW__c *12) + Prospect_Record__r.Annual_Insurance_Est_UW__c+ IF(Prospect_Record__r.Pool__c=TRUE, Market__r.Pool_Exp_Per_Home__c , 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Exp (Inc Pool) @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>