Custom--app/main/default/objects/AcqPipeline__c/fields/Funds_Due_From_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Funds_Due_From_Buyer__c</fullName>
    <formula>Closing_Statement_Contract_Price__c - Closing_Statement_Deposit__c - ( Acq_Costs_Paid_at_Closing__c + Other_Costs_Paid_at_Closing__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COE Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>