Custom--app/main/default/objects/AcqPipeline__c/fields/HOA_CC_R_Reviewed_and_Approved__c.field-meta.xml
<CustomField>
    <fullName>HOA_CC_R_Reviewed_and_Approved__c</fullName>
    <label>HOA CC&amp;R Approval Date</label>
    <type>Date</type>
</CustomField>