Custom--app/main/default/objects/AcqPipeline__c/fields/HOA_Date_Prepaid__c.field-meta.xml
<CustomField>
    <fullName>HOA_Date_Prepaid__c</fullName>
    <label>HOA Date Prepaid</label>
    <type>Date</type>
</CustomField>