Custom--app/main/default/objects/AcqPipeline__c/fields/HOA_Estoppel_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>HOA_Estoppel_Approval_Date__c</fullName>
    <label>HOA Estoppel Approval Date</label>
    <type>Date</type>
</CustomField>