Custom--app/main/default/objects/AcqPipeline__c/fields/HOA_Estoppel_Notes__c.field-meta.xml
<CustomField>
    <fullName>HOA_Estoppel_Notes__c</fullName>
    <label>HOA Estoppel Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>