Custom--app/main/default/objects/AcqPipeline__c/fields/HOA_Name_UW__c.field-meta.xml
<CustomField>
    <fullName>HOA_Name_UW__c</fullName>
    <formula>Opportunity__r.HOA_Name__c</formula>
    <label>HOA Name @ UW</label>
    <type>Text</type>
</CustomField>