Custom--app/main/default/objects/AcqPipeline__c/fields/HOA_Notes__c.field-meta.xml
<CustomField>
    <fullName>HOA_Notes__c</fullName>
    <label>HOA Notes</label>
    <type>TextArea</type>
</CustomField>