Custom--app/main/default/objects/AcqPipeline__c/fields/HOA_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>HOA_Restrictions__c</fullName>
    <label>HOA Restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>