Custom--app/main/default/objects/AcqPipeline__c/fields/HOA_Y_N__c.field-meta.xml
<CustomField>
    <fullName>HOA_Y_N__c</fullName>
    <label>HOA (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>