Custom--app/main/default/objects/AcqPipeline__c/fields/IH_Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>IH_Reporting_Date__c</fullName>
    <label>IH Reporting Date</label>
    <type>Date</type>
</CustomField>