Custom--app/main/default/objects/AcqPipeline__c/fields/Lease_Rent_Prorate__c.field-meta.xml
<CustomField>
    <fullName>Lease_Rent_Prorate__c</fullName>
    <label>Lease Rent Prorate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>