Custom--app/main/default/objects/AcqPipeline__c/fields/Lease_Total_Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lease_Total_Rent_Amount__c</fullName>
    <formula>Assumed_Lease_Tenant_Rent__c + Assumed_Lease_HAP_Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Total Rent Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>