Custom--app/main/default/objects/AcqPipeline__c/fields/Market_2__c.field-meta.xml
<CustomField>
    <fullName>Market_2__c</fullName>
    <formula>Opportunity__r.Market2__c</formula>
    <label>Market 2</label>
    <type>Text</type>
</CustomField>