Custom--app/main/default/objects/AcqPipeline__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipName>Pipeline1</relationshipName>
    <type>Lookup</type>
</CustomField>