Custom--app/main/default/objects/AcqPipeline__c/fields/Monthly_HOA_UW__c.field-meta.xml
<CustomField>
    <fullName>Monthly_HOA_UW__c</fullName>
    <formula>Prospect_Record__r.Monthly_HOA_UW__c</formula>
    <label>Monthly HOA @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>