Custom--app/main/default/objects/AcqPipeline__c/fields/NOI_Margin_UW__c.field-meta.xml
<CustomField>
    <fullName>NOI_Margin_UW__c</fullName>
    <formula>Pro_forma_NOI_UW__c / Total_Revenue_UW__c</formula>
    <label>NOI Margin @ UW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>