Custom--app/main/default/objects/AcqPipeline__c/fields/Occupied_Status_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Status_Acquisition__c</fullName>
    <formula>Text(  Prospect_Record__r.Occupied_Status_Acquisition__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupied Status @ Acquisition</label>
    <type>Text</type>
</CustomField>