Custom--app/main/default/objects/AcqPipeline__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Acq_Opportunity__c</referenceTo>
    <relationshipName>Pipeline</relationshipName>
    <type>Lookup</type>
</CustomField>