Custom--app/main/default/objects/AcqPipeline__c/fields/Other_Costs_Paid_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs_Paid_at_Closing__c</fullName>
    <formula>Closing_Statement_HOA_Prorates__c + Closing_Statement_Property_Tax_Prorates__c + Closing_Statement_HOA_Prepays__c +  Closing_Statement_Property_Tax_Prepays__c+ Security_Deposit__c + Closing_Rent_Prepays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Costs Paid at Closing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>