Custom--app/main/default/objects/AcqPipeline__c/fields/Pipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status__c</fullName>
    <label>Pipeline Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract Reviewed</fullName>
            </value>
            <value>
                <fullName>Review Complete</fullName>
            </value>
            <value>
                <fullName>Due Diligence Approved</fullName>
            </value>
            <value>
                <fullName>Closing Approved</fullName>
            </value>
            <value>
                <fullName>Moved to Queue</fullName>
            </value>
            <value>
                <fullName>Portfolio Created</fullName>
            </value>
            <value>
                <fullName>Cancelled/Dead</fullName>
            </value>
            <value>
                <fullName>Closed/Dead</fullName>
                <isActive>false</isActive>
                <label>Closed/Dead</label>
            </value>
            <value>
                <fullName>Order COE</fullName>
                <isActive>false</isActive>
                <label>Order COE</label>
            </value>
            <value>
                <fullName>Rehab approved</fullName>
                <isActive>false</isActive>
                <label>Rehab approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>