Custom--app/main/default/objects/AcqPipeline__c/fields/PipeToPortFolio_Status__c.field-meta.xml
<CustomField>
    <fullName>PipeToPortFolio_Status__c</fullName>
    <label>PipeToPortFolio Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>