Custom--app/main/default/objects/AcqPipeline__c/fields/Prelim_Title_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Title_Approval_Date__c</fullName>
    <label>Prelim Title Approval Date</label>
    <type>Date</type>
</CustomField>