Custom--app/main/default/objects/AcqPipeline__c/fields/Prelim_Title_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Title_Review_Notes__c</fullName>
    <label>Prelim Title Review Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>