Custom--app/main/default/objects/AcqPipeline__c/fields/Prelim_Title_Reviewed_Approved__c.field-meta.xml
<CustomField>
    <fullName>Prelim_Title_Reviewed_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prelim Title Reviewed &amp; Approved</label>
    <type>Checkbox</type>
</CustomField>