Custom--app/main/default/objects/AcqPipeline__c/fields/Property_Score__c.field-meta.xml
<CustomField>
    <fullName>Property_Score__c</fullName>
    <label>Property Score</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>